# nestboxd

./: Cargo.toml  README.md
.github/workflows/: rust.yml
src/: extract_argv.rs  main.rs
src/controller/: nestbox.rs  req_structs.rs  user.rs
src/service/: bird.rs  breed.rs  image.rs  nestbox.rs  res_structs.rs  user.rs
