[package]
name = "nestboxd"
version = "0.1.0"
authors = ["Stefan Dörig <sdoerig@bluewin.ch>"]
edition = "2021"
license = "AGPL-3.0-or-later"
description = "Backend for birdhouse cleaners - don't laugh - they exist."
homepage = "https://github.com/sdoerig/nestboxd"
repository = "https://github.com/sdoerig/nestboxd"
keywords = ["Backend", "Birders", "Birdhouse", "Webservice" ]
exclude = [
    ".github",
]


[dependencies]
actix-multipart = "0.6"
actix-rt = "2"
actix-web = "4"
actix-http = "3"
chrono = "0.4"
data-encoding = "2"
env_logger = "0"
futures = "0.3"
getopts = "0.2"
hex = "0.4"
hex-literal = "0.4"
image = "0.24"
infer = "0.15"
lazy_static = "1"
rand = "0.8"
regex = "1"
serde = "1"
sha3 = "0.10"
yaml-rust = "0.4"

[dependencies.mongodb]
version = "2"
default-features = false
features = ["async-std-runtime"]

[dependencies.uuid]
version = "1.4.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]